fix: add missing maps

--- a/Resources/Maps/marathon.yml
+++ b/Resources/Maps/marathon.yml
@@ -7741,6 +7741,7 @@ entities:
         chunkSize: 4
     - type: BecomesStation
       id: Marathon
+    - type: MaterialStorage
     - type: OccluderTree
     - type: Shuttle
     - type: RadiationGridResistance
