--- a/Resources/Maps/omega.yml
+++ b/Resources/Maps/omega.yml
@@ -4186,6 +4186,7 @@ entities:
         chunkSize: 4
     - type: BecomesStation
       id: Omega
+    - type: MaterialStorage
     - type: OccluderTree
     - type: Shuttle
     - type: RadiationGridResistance
