--- a/Resources/Maps/saltern.yml
+++ b/Resources/Maps/saltern.yml
@@ -236,6 +236,7 @@ entities:
       fixtures: {}
     - type: BecomesStation
       id: Saltern
+    - type: MaterialStorage
     - type: GridAtmosphere
       version: 2
       data:
