--- a/Resources/Prototypes/Entities/Structures/Furniture/chairs.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/chairs.yml
@@ -4,7 +4,7 @@
   abstract: true
   description: You sit in this. Either by will or force.
   placement:
-    mode: PlaceFree
+    mode: SnapgridCenter
   components:
   - type: Clickable
   - type: InteractionOutline
@@ -314,12 +314,6 @@
     thresholds:
     - trigger:
         !type:DamageTrigger
-        damage: 300 #excess damage (nuke?). avoid computational cost of spawning entities.  # WD edit start
-      behaviors:
-        - !type:DoActsBehavior
-          acts: [ "Destruction" ]
-    - trigger:
-        !type:DamageTrigger  # WD edit end
         damage: 50
       behaviors:
       - !type:DoActsBehavior
@@ -413,3 +407,82 @@
             max: 4
   - type: StaticPrice
     price: 20
+
+- type: entity
+  name: black padded stool
+  id: BlackPaddedStool
+  parent: ChairBase
+  description: Soft bag chair, comfortable!
+  components:
+  - type: Sprite
+    sprite: Structures/Furniture/padded_stool.rsi
+    state: pufi-black
+
+- type: entity
+  name: blue padded stool
+  id: BluePaddedStool
+  parent: ChairBase
+  description: Soft bag chair, comfortable!
+  components:
+  - type: Sprite
+    sprite: Structures/Furniture/padded_stool.rsi
+    state: pufi-blue
+
+- type: entity
+  name: green padded stool
+  id: GreenPaddedStool
+  parent: ChairBase
+  description: Soft bag chair, comfortable!
+  components:
+  - type: Sprite
+    sprite: Structures/Furniture/padded_stool.rsi
+    state: pufi-green
+
+- type: entity
+  name: orange padded stool
+  id: OrangePaddedStool
+  parent: ChairBase
+  description: Soft bag chair, comfortable!
+  components:
+  - type: Sprite
+    sprite: Structures/Furniture/padded_stool.rsi
+    state: pufi-orange
+
+- type: entity
+  name: pink padded stool
+  id: PinkPaddedStool
+  parent: ChairBase
+  description: Soft bag chair, comfortable!
+  components:
+  - type: Sprite
+    sprite: Structures/Furniture/padded_stool.rsi
+    state: pufi-pink
+- type: entity
+  name: purple padded stool
+  id: PurplePaddedStool
+  parent: ChairBase
+  description: Soft bag chair, comfortable!
+  components:
+  - type: Sprite
+    sprite: Structures/Furniture/padded_stool.rsi
+    state: pufi-purple
+
+- type: entity
+  name: red padded stool
+  id: RedPaddedStool
+  parent: ChairBase
+  description: Soft bag chair, comfortable!
+  components:
+  - type: Sprite
+    sprite: Structures/Furniture/padded_stool.rsi
+    state: pufi-red
+
+- type: entity
+  name: white padded stool
+  id: WhitePaddedStool
+  parent: ChairBase
+  description: Soft bag chair, comfortable!
+  components:
+  - type: Sprite
+    sprite: Structures/Furniture/padded_stool.rsi
+    state: pufi-white
