--- a/Resources/Prototypes/Catalog/Fills/Lockers/medical.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/medical.yml
@@ -15,6 +15,7 @@
       - id: Bloodpack
         amount: 2
       - id: Gauze
+      - id: MedkitFilled
 
 - type: entity
   id: LockerWallMedicalFilled
@@ -34,6 +35,7 @@
       - id: Bloodpack
         amount: 2
       - id: Gauze
+      - id: MedkitFilled
 
 
 - type: entity
@@ -44,7 +46,6 @@
   - type: StorageFill
     contents:
       - id: HandheldHealthAnalyzer
-        prob: 0.6
       - id: ClothingHandsGlovesLatex
       - id: ClothingHeadsetMedical
       - id: ClothingEyesHudMedical
@@ -149,6 +150,5 @@
       - id: ClothingMaskSterile
       - id: HandheldGPSBasic
       - id: MedkitFilled
-        prob: 0.3
       - id: Eftpos
       - id: ClothingBeltMedicalEMT
