add: medical patches

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/medical.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/medical.yml
@@ -12,5 +12,8 @@
     SyringeBicaridine: 1
     SyringeDermaline: 1
     Eftpos: 2
+    Patch: 20
+    BrutePatch: 10
+    BurnPatch: 10
   emaggedInventory:
     SyringeEphedrine: 1
