--- a/Resources/Prototypes/Entities/Structures/Furniture/chairs.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/chairs.yml
@@ -202,6 +202,9 @@
   - type: Sprite
     sprite: Structures/Furniture/comfy_chair.rsi
     state: comfy-black
+  - type: Construction
+    graph: Seat
+    node: blackChairComfy
 
 - type: entity
   name: blue comfy chair
@@ -212,6 +215,9 @@
   - type: Sprite
     sprite: Structures/Furniture/comfy_chair.rsi
     state: comfy-blue
+  - type: Construction
+    graph: Seat
+    node: blueChairComfy
 
 - type: entity
   name: green comfy chair
@@ -222,6 +228,9 @@
   - type: Sprite
     sprite: Structures/Furniture/comfy_chair.rsi
     state: comfy-green
+  - type: Construction
+    graph: Seat
+    node: greenChairComfy
 
 - type: entity
   name: orange comfy chair
@@ -232,6 +241,9 @@
   - type: Sprite
     sprite: Structures/Furniture/comfy_chair.rsi
     state: comfy-orange
+  - type: Construction
+    graph: Seat
+    node: orangeChairComfy
 
 - type: entity
   name: pink comfy chair
@@ -242,6 +254,9 @@
   - type: Sprite
     sprite: Structures/Furniture/comfy_chair.rsi
     state: comfy-pink
+  - type: Construction
+    graph: Seat
+    node: pinkChairComfy
 
 - type: entity
   name: purple comfy chair
@@ -252,6 +267,9 @@
   - type: Sprite
     sprite: Structures/Furniture/comfy_chair.rsi
     state: comfy-purple
+  - type: Construction
+    graph: Seat
+    node: purpleChairComfy
 
 - type: entity
   name: red comfy chair
@@ -262,6 +280,9 @@
   - type: Sprite
     sprite: Structures/Furniture/comfy_chair.rsi
     state: comfy-red
+  - type: Construction
+    graph: Seat
+    node: redChairComfy
 
 - type: entity
   name: white comfy chair
@@ -272,6 +293,9 @@
   - type: Sprite
     sprite: Structures/Furniture/comfy_chair.rsi
     state: comfy-white
+  - type: Construction
+    graph: Seat
+    node: whiteChairComfy
 
 - type: entity
   name: pilot seat
