- fix: energy rifle now can charge in turbo charger - tweak: minimum hellfire freezer temperature changed 23.15 => 19.5 K

--- a/Resources/Prototypes/Entities/Structures/Power/chargers.yml
+++ b/Resources/Prototypes/Entities/Structures/Power/chargers.yml
@@ -188,6 +188,7 @@
           - HitscanBatteryAmmoProvider
           - ProjectileBatteryAmmoProvider
           - Stunbaton
+          - TwoModeEnergyAmmoProvider
           - PowerCell
         blacklist:
           tags:
