--- a/Resources/Prototypes/Entities/Structures/Furniture/sofas.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/sofas.yml
@@ -8,6 +8,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-black.rsi
     state: state_0
+  - type: Construction
+    graph: Sofas
+    node: blackSofaLeftEnd
 
 - type: entity
   name: black sofa
@@ -18,6 +21,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-black.rsi
     state: state_1
+  - type: Construction
+    graph: Sofas
+    node: blackSofaRightEnd
 
 - type: entity
   name: black sofa
@@ -28,6 +34,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-black.rsi
     state: state_2
+  - type: Construction
+    graph: Sofas
+    node: blackSofaCorner
 
 - type: entity
   name: black sofa
@@ -38,6 +47,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-black.rsi
     state: state_3
+  - type: Construction
+    graph: Sofas
+    node: blackSofaForward
 
 #blue
 - type: entity
@@ -49,6 +61,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-blue.rsi
     state: state_0
+  - type: Construction
+    graph: Sofas
+    node: blueSofaLeftEnd
 
 - type: entity
   name: blue sofa
@@ -59,6 +74,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-blue.rsi
     state: state_1
+  - type: Construction
+    graph: Sofas
+    node: blueSofaRightEnd
 
 - type: entity
   name: blue sofa
@@ -69,6 +87,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-blue.rsi
     state: state_2
+  - type: Construction
+    graph: Sofas
+    node: blueSofaCorner
 
 - type: entity
   name: blue sofa
@@ -79,6 +100,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-blue.rsi
     state: state_3
+  - type: Construction
+    graph: Sofas
+    node: blueSofaForward
 
 #green
 - type: entity
@@ -90,6 +114,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-green.rsi
     state: state_0
+  - type: Construction
+    graph: Sofas
+    node: greenSofaLeftEnd
 
 - type: entity
   name: green sofa
@@ -100,6 +127,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-green.rsi
     state: state_1
+  - type: Construction
+    graph: Sofas
+    node: greenSofaRightEnd
 
 - type: entity
   name: green sofa
@@ -110,6 +140,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-green.rsi
     state: state_2
+  - type: Construction
+    graph: Sofas
+    node: greenSofaCorner
 
 - type: entity
   name: green sofa
@@ -120,6 +153,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-green.rsi
     state: state_3
+  - type: Construction
+    graph: Sofas
+    node: greenSofaForward
 
 #orange
 - type: entity
@@ -131,6 +167,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-orange.rsi
     state: state_0
+  - type: Construction
+    graph: Sofas
+    node: orangeSofaLeftEnd
 
 - type: entity
   name: orange sofa
@@ -141,6 +180,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-orange.rsi
     state: state_1
+  - type: Construction
+    graph: Sofas
+    node: orangeSofaRightEnd
 
 - type: entity
   name: orange sofa
@@ -151,6 +193,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-orange.rsi
     state: state_2
+  - type: Construction
+    graph: Sofas
+    node: orangeSofaCorner
 
 - type: entity
   name: orange sofa
@@ -161,6 +206,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-orange.rsi
     state: state_3
+  - type: Construction
+    graph: Sofas
+    node: orangeSofaForward
 
 #pink
 - type: entity
@@ -172,6 +220,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-pink.rsi
     state: state_0
+  - type: Construction
+    graph: Sofas
+    node: pinkSofaLeftEnd
 
 - type: entity
   name: pink sofa
@@ -182,6 +233,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-pink.rsi
     state: state_1
+  - type: Construction
+    graph: Sofas
+    node: pinkSofaRightEnd
 
 - type: entity
   name: pink sofa
@@ -192,6 +246,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-pink.rsi
     state: state_2
+  - type: Construction
+    graph: Sofas
+    node: pinkSofaCorner
 
 - type: entity
   name: pink sofa
@@ -202,6 +259,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-pink.rsi
     state: state_3
+  - type: Construction
+    graph: Sofas
+    node: pinkSofaForward
 
 #purple
 - type: entity
@@ -213,6 +273,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-purple.rsi
     state: state_0
+  - type: Construction
+    graph: Sofas
+    node: purpleSofaLeftEnd
 
 - type: entity
   name: purple sofa
@@ -223,6 +286,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-purple.rsi
     state: state_1
+  - type: Construction
+    graph: Sofas
+    node: purpleSofaRightEnd
 
 - type: entity
   name: purple sofa
@@ -233,6 +299,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-purple.rsi
     state: state_2
+  - type: Construction
+    graph: Sofas
+    node: purpleSofaCorner
 
 - type: entity
   name: purple sofa
@@ -243,6 +312,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-purple.rsi
     state: state_3
+  - type: Construction
+    graph: Sofas
+    node: purpleSofaForward
 
 #red
 - type: entity
@@ -254,6 +326,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-red.rsi
     state: state_0
+  - type: Construction
+    graph: Sofas
+    node: redSofaLeftEnd
 
 - type: entity
   name: red sofa
@@ -264,6 +339,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-red.rsi
     state: state_1
+  - type: Construction
+    graph: Sofas
+    node: redSofaRightEnd
 
 - type: entity
   name: red sofa
@@ -274,6 +352,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-red.rsi
     state: state_2
+  - type: Construction
+    graph: Sofas
+    node: redSofaCorner
 
 - type: entity
   name: red sofa
@@ -284,6 +365,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-red.rsi
     state: state_3
+  - type: Construction
+    graph: Sofas
+    node: redSofaForward
 
 #white
 - type: entity
@@ -295,6 +379,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-white.rsi
     state: state_0
+  - type: Construction
+    graph: Sofas
+    node: whiteSofaLeftEnd
 
 - type: entity
   name: white sofa
@@ -305,6 +392,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-white.rsi
     state: state_1
+  - type: Construction
+    graph: Sofas
+    node: whiteSofaRightEnd
 
 - type: entity
   name: white sofa
@@ -315,6 +405,9 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-white.rsi
     state: state_2
+  - type: Construction
+    graph: Sofas
+    node: whiteSofaCorner
 
 - type: entity
   name: white sofa
@@ -325,3 +418,6 @@
   - type: Sprite
     sprite: Structures/Furniture/Sofas/sofa-white.rsi
     state: state_3
+  - type: Construction
+    graph: Sofas
+    node: whiteSofaForward
