--- a/Resources/Prototypes/Entities/Structures/Doors/Airlocks/highsec.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Airlocks/highsec.yml
@@ -1,12 +1,11 @@
 - type: entity
   id: HighSecDoor
-  parent: BaseStructure
+  parent: Airlock
   name: high security door
   description: Keeps the bad out and keeps the good in.
   placement:
     mode: SnapgridCenter
   components:
-  - type: InteractionOutline
   - type: Sprite
     sprite: Structures/Doors/Airlocks/highsec/highsec.rsi
     layers:
@@ -25,25 +24,6 @@
       shader: unshaded
     - state: panel_open
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
-  - type: AnimationPlayer
-  - type: Physics
-  - type: Fixtures
-    fixtures:
-      fix1:
-        shape:
-          !type:PhysShapeAabb
-          bounds: "-0.49,-0.49,0.49,0.49" # don't want this colliding with walls or they won't close
-        density: 100
-        mask:
-        - FullTileMask
-        layer:
-        - WallLayer
-  - type: ContainerFill
-    containers:
-      board: [ DoorElectronics ]
-  - type: ContainerContainer
-    containers:
-      board: !type:Container
   - type: Door
     crushDamage:
       types:
@@ -56,35 +36,15 @@
       path: /Audio/Machines/airlock_deny.ogg
   - type: Weldable
     time: 10
-  - type: Airlock
-  - type: NavMapDoor
-  - type: DoorBolt
-  - type: AccessReader
-  - type: Appearance
-  - type: WiresVisuals
   - type: ApcPowerReceiver
     powerLoad: 20
-  - type: ExtensionCableReceiver
-  - type: Electrified
-    enabled: false
-    usesApcPower: true
-  - type: WiresPanel
   - type: WiresPanelSecurity
     securityLevel: maxSecurity
   - type: Wires
     boardName: wires-board-name-highsec
     layoutId: HighSec
     alwaysRandomize: true
-  - type: UserInterface
-    interfaces:
-    - key: enum.WiresUiKey.Key
-      type: WiresBoundUserInterface
-  - type: Airtight
-    fixVacuum: true
   - type: Occluder
-  - type: Damageable
-    damageContainer: StructuralInorganic
-    damageModifierSet: StrongMetallic
   - type: Destructible
     thresholds:
     - trigger:
@@ -93,9 +53,6 @@
       behaviors:
       - !type:DoActsBehavior
         acts: ["Destruction"]
-  - type: IconSmooth
-    key: walls
-    mode: NoSprite
   - type: Construction
     graph: Airlock
     node: highSecDoor
