--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/healthanalyzer.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/healthanalyzer.yml
@@ -8,11 +8,12 @@
     sprite: Objects/Specific/Medical/healthanalyzer.rsi
     state: icon
     layers:
-      - state: icon
-      - state: analyzer
-        shader: unshaded
+      - map: [ "analyzerLayerBody" ]
+        state: icon
         visible: true
-        map: [ "enum.PowerDeviceVisualLayers.Powered" ]
+      - map: [ "analyzerLayerScreen" ]
+        state: powered
+        visible: false
   - type: Item
     storedRotation: -90
   - type: ActivatableUI
@@ -33,8 +34,8 @@
     visuals:
       enum.PowerCellSlotVisuals.Enabled:
         enum.PowerDeviceVisualLayers.Powered:
-          True: { visible: true }
-          False: { visible: false }
+          True: { state: powered, visible: true, shader: unshaded }
+          False: { state: powered, visible: false }
   - type: GuideHelp
     guides:
       - Medical Doctor
@@ -47,6 +48,10 @@
   - type: PowerCellDraw
     drawRate: 1.2 #Calculated for 5 minutes on a small cell
   - type: ActivatableUIRequiresPowerCell
+  - type: PointLightBattery
+    radius: 1.2
+    energy: 0.5
+    color: "#7FB6C0"
 
 - type: entity
   id: HandheldHealthAnalyzerEmpty
