--- a/Resources/Prototypes/_White/AnimatedLobbyScreens/lobbyScreens.yml
+++ b/Resources/Prototypes/_White/AnimatedLobbyScreens/lobbyScreens.yml
@@ -1,23 +1,4 @@
 - type: animatedLobbyScreen
-  id: FourthLobbyScreen
-  path: Ohio/Lobby/backgrounds/papich.rsi
+  id: CumLobbyScreen
+  path: /Gifs/cum.gif
 
-- type: animatedLobbyScreen
-  id: MilkywayLobbyScreen
-  path: Ohio/Lobby/backgrounds/4.rsi
-
-- type: animatedLobbyScreen
-  id: SusLobbyScreen
-  path: Ohio/Lobby/backgrounds/syndicate.rsi
-
-#- type: animatedLobbyScreen
-#  id: NativeLobbyScreen
-#  path: Ohio/Lobby/backgrounds/native.rsi
-
-#- type: animatedLobbyScreen
-#  id: ThirdLobbyScreen
-#  path: Ohio/Lobby/backgrounds/3.rsi
-
-#- type: animatedLobbyScreen
-#  id: FifthLobbyScreen
-#  path: Ohio/Lobby/backgrounds/5.rsi
