--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/healthanalyzer.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/healthanalyzer.yml
@@ -47,8 +47,11 @@
   components:
   - type: PowerCellDraw
     drawRate: 1.2 #Calculated for 5 minutes on a small cell
+  - type: PowerCellSlot
+    cellSlotId: cell_slot
   - type: ActivatableUIRequiresPowerCell
   - type: PointLightBattery
+  - type: PointLight
     radius: 1.2
     energy: 0.5
     color: "#7FB6C0"
