--- a/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
@@ -138,6 +138,7 @@
       - id: BoxBodyCamera
       - id: VoiceRecorder
       - id: ClothingEyesGlassesSecurity
+      - id: BoxZipLocks
 
 - type: entity
   id: ClosetBombFilled
