--- a/Resources/Prototypes/Catalog/Fills/Boxes/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Boxes/security.yml
@@ -98,3 +98,22 @@
       layers:
         - state: box_security
         - state: bodycam
+
+- type: entity
+  name: zip lock box
+  parent: BoxCardboard
+  id: BoxZipLocks
+  description: A box full of zip locks.
+  components:
+    - type: Storage
+      whitelist:
+      components:
+      - ZipLock
+    - type: StorageFill
+      contents:
+        - id: ZipLock
+          amount: 3
+    - type: Sprite
+      layers:
+        - state: box_security
+        - state: ziplock
