--- a/Resources/Prototypes/Catalog/Fills/Boxes/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Boxes/security.yml
@@ -106,13 +106,11 @@
   description: A box full of zip locks.
   components:
     - type: Storage
-      whitelist:
-      components:
-      - ZipLock
+      maxItemSize: Normal
     - type: StorageFill
       contents:
         - id: ZipLock
-          amount: 3
+          amount: 4
     - type: Sprite
       layers:
         - state: box_security
