--- a/Resources/Prototypes/_White/Construction/Cult/structures.yml
+++ b/Resources/Prototypes/_White/Construction/Cult/structures.yml
@@ -1,4 +1,4 @@
-﻿- type: construction
+- type: construction
   id: CultGirder
   name: руническая балка
   description: Большой конструктивный элемент, изготовленный из металла. На этом есть руна.
@@ -37,7 +37,7 @@
 - type: construction
   id: CultPylon
   name: пилон
-  description: Мистический конструкция.
+  description: Мистическая конструкция.
   graph: CultPylon
   startNode: start
   targetNode: pylon
