- tweak: Less storage clothing size.

--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/base_clothingouter.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/base_clothingouter.yml
@@ -17,7 +17,7 @@
   id: ClothingOuterBaseLarge
   components:
   - type: Item
-    size: Huge
+    size: Large
   - type: Clothing
     slots:
     - outerClothing
@@ -155,4 +155,4 @@
   id: ClothingOuterBaseMedium
   components:
   - type: Item
-    size: Huge
+    size: Large
