--- a/Resources/Prototypes/White/Catalog/uplink.yml
+++ b/Resources/Prototypes/White/Catalog/uplink.yml
@@ -87,6 +87,11 @@
     Telecrystal: 12
   categories:
   - UplinkImplants
+  conditions:
+  - !type:StoreWhitelistCondition
+    blacklist:
+      tags:
+      - NukeOpsUplink
 
 # Night Vision
 - type: listing
