- remove: Disable whisper aspect.

--- a/Resources/Prototypes/White/Aspects/Aspects.yml
+++ b/Resources/Prototypes/White/Aspects/Aspects.yml
@@ -258,6 +258,7 @@
       weight: 3
       startAudio:
         path: /Audio/White/Aspects/accent.ogg
+      forbidden: true
     - type: WhisperAspect
 
 - type: entity
