--- a/Resources/Prototypes/Entities/Structures/Storage/Tanks/tanks.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Tanks/tanks.yml
@@ -34,6 +34,7 @@
   - type: Explosive
     explosionType: Default
     totalIntensity: 120 # ~ 5 tile radius
+    canCreateVacuum: false
 
 - type: entity
   id: WeldingFuelTankFull
@@ -76,6 +77,7 @@
   - type: Explosive
     explosionType: Default
     totalIntensity: 140
+    canCreateVacuum: false
 
 # Water
 
