--- a/Resources/Prototypes/Entities/Structures/Furniture/chairs.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/chairs.yml
@@ -520,7 +520,7 @@
   components:
   - type: Sprite
     sprite: Structures/Furniture/chairs.rsi
-    state: pufi-greyscale
+    state: pufi-box-greyscale
     color: "#23242c"
   - type: Construction
     graph: Seat
@@ -534,7 +534,7 @@
   components:
   - type: Sprite
     sprite: Structures/Furniture/chairs.rsi
-    state: pufi-greyscale
+    state: pufi-box-greyscale
     color: "#356287"
   - type: Construction
     graph: Seat
@@ -548,7 +548,7 @@
   components:
   - type: Sprite
     sprite: Structures/Furniture/chairs.rsi
-    state: pufi-greyscale
+    state: pufi-box-greyscale
     color: "#2a6e47"
   - type: Construction
     graph: Seat
@@ -562,7 +562,7 @@
   components:
   - type: Sprite
     sprite: Structures/Furniture/chairs.rsi
-    state: pufi-greyscale
+    state: pufi-box-greyscale
     color: "#9d480c"
   - type: Construction
     graph: Seat
@@ -576,7 +576,7 @@
   components:
   - type: Sprite
     sprite: Structures/Furniture/chairs.rsi
-    state: pufi-greyscale
+    state: pufi-box-greyscale
     color: "#91265e"
   - type: Construction
     graph: Seat
@@ -590,7 +590,7 @@
   components:
   - type: Sprite
     sprite: Structures/Furniture/chairs.rsi
-    state: pufi-greyscale
+    state: pufi-box-greyscale
     color: "#563968"
   - type: Construction
     graph: Seat
@@ -604,7 +604,7 @@
   components:
   - type: Sprite
     sprite: Structures/Furniture/chairs.rsi
-    state: pufi-greyscale
+    state: pufi-box-greyscale
     color: "#872222"
   - type: Construction
     graph: Seat
@@ -618,7 +618,7 @@
   components:
   - type: Sprite
     sprite: Structures/Furniture/chairs.rsi
-    state: pufi-greyscale
+    state: pufi-box-greyscale
     color: "#dcdcdc"
   - type: Construction
     graph: Seat
