--- a/Resources/Prototypes/Recipes/Construction/Graphs/furniture/seats.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/furniture/seats.yml
@@ -127,41 +127,65 @@
             - material: Cloth
               amount: 3
               doAfter: 1
+            - material: WoodPlank
+              amount: 1
+              doAfter: 1
         - to: bluePaddedStool
           steps:
             - material: Cloth
               amount: 3
+              doAfter: 1
+            - material: WoodPlank
+              amount: 1
               doAfter: 1
         - to: greenPaddedStool
           steps:
             - material: Cloth
               amount: 3
               doAfter: 1
+            - material: WoodPlank
+              amount: 1
+              doAfter: 1
         - to: orangePaddedStool
           steps:
             - material: Cloth
               amount: 3
               doAfter: 1
+            - material: WoodPlank
+              amount: 1
+              doAfter: 1              
         - to: pinkPaddedStool
           steps:
             - material: Cloth
               amount: 3
               doAfter: 1
+            - material: WoodPlank
+              amount: 1
+              doAfter: 1              
         - to: purplePaddedStool
           steps:
             - material: Cloth
               amount: 3
               doAfter: 1
+            - material: WoodPlank
+              amount: 1
+              doAfter: 1              
         - to: redPaddedStool
           steps:
             - material: Cloth
               amount: 3
               doAfter: 1
+            - material: WoodPlank
+              amount: 1
+              doAfter: 1              
         - to: whitePaddedStool
           steps:
             - material: Cloth
               amount: 3
               doAfter: 1
+            - material: WoodPlank
+              amount: 1
+              doAfter: 1              
 
     - node: chair
       entity: Chair
@@ -444,6 +468,9 @@
             - !type:SpawnPrototype
               prototype: MaterialCloth1
               amount: 3
+            - !type:SpawnPrototype
+              prototype: MaterialWoodPlank1
+              amount: 1
           steps:
             - tool: Cutting
               doAfter: 1
@@ -456,6 +483,9 @@
             - !type:SpawnPrototype
               prototype: MaterialCloth1
               amount: 3
+            - !type:SpawnPrototype
+              prototype: MaterialWoodPlank1
+              amount: 1              
           steps:
             - tool: Cutting
               doAfter: 1
@@ -468,6 +498,9 @@
             - !type:SpawnPrototype
               prototype: MaterialCloth1
               amount: 3
+            - !type:SpawnPrototype
+              prototype: MaterialWoodPlank1
+              amount: 1              
           steps:
             - tool: Cutting
               doAfter: 1
@@ -480,6 +513,9 @@
             - !type:SpawnPrototype
               prototype: MaterialCloth1
               amount: 3
+            - !type:SpawnPrototype
+              prototype: MaterialWoodPlank1
+              amount: 1              
           steps:
             - tool: Cutting
               doAfter: 1
@@ -492,6 +528,9 @@
             - !type:SpawnPrototype
               prototype: MaterialCloth1
               amount: 3
+            - !type:SpawnPrototype
+              prototype: MaterialWoodPlank1
+              amount: 1              
           steps:
             - tool: Cutting
               doAfter: 1
@@ -504,6 +543,9 @@
             - !type:SpawnPrototype
               prototype: MaterialCloth1
               amount: 3
+            - !type:SpawnPrototype
+              prototype: MaterialWoodPlank1
+              amount: 1              
           steps:
             - tool: Cutting
               doAfter: 1
@@ -516,6 +558,9 @@
             - !type:SpawnPrototype
               prototype: MaterialCloth1
               amount: 3
+            - !type:SpawnPrototype
+              prototype: MaterialWoodPlank1
+              amount: 1              
           steps:
             - tool: Cutting
               doAfter: 1
@@ -528,6 +573,9 @@
             - !type:SpawnPrototype
               prototype: MaterialCloth1
               amount: 3
+            - !type:SpawnPrototype
+              prototype: MaterialWoodPlank1
+              amount: 1              
           steps:
             - tool: Cutting
               doAfter: 1
