--- a/Resources/Maps/core.yml
+++ b/Resources/Maps/core.yml
@@ -20173,7 +20173,7 @@ entities:
     - type: Transform
       pos: 19.5,-51.5
       parent: 2
-- proto: BodyBag_Folded
+- proto: BodyBagFolded
   entities:
   - uid: 161
     components:
