--- a/Resources/Maps/europa.yml
+++ b/Resources/Maps/europa.yml
@@ -15255,7 +15255,7 @@ entities:
     - type: Transform
       pos: 30.5,56.5
       parent: 1
-- proto: BodyBag_Folded
+- proto: BodyBagFolded
   entities:
   - uid: 2490
     components:
