--- a/Resources/Prototypes/Polymorphs/polymorph.yml
+++ b/Resources/Prototypes/Polymorphs/polymorph.yml
@@ -341,6 +341,17 @@
     inventory: Transfer
 
 - type: polymorph
+  id: MobHumanGhost
+  configuration:
+    entity: MobHuman
+    forced: true
+    revertOnCrit: false
+    revertOnDeath: false
+    transferDamage: true
+    allowRepeatedMorphs: true
+    inventory: Transfer
+
+- type: polymorph
   id: MobGingerbread
   configuration:
     entity: MobGingerbread
