--- a/Resources/Prototypes/_White/Entities/Cult/Items/tome_craft.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Items/tome_craft.yml
@@ -49,6 +49,7 @@
     - type: ShowHealthIcons
       damageContainers:
       - Biological
+    - type: ShowSecurityIcons
 
 - type: entity
   name: veil shifter
