add: только гуманоиды могут ложиться

--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -177,6 +177,7 @@
   - type: SleepEmitSound
   - type: SSDIndicator
   - type: StandingState
+    canLieDown: true
   - type: Fingerprint
   - type: Dna
   - type: MindContainer
