--- a/Resources/Prototypes/White/Ghosts/custom_ghosts.yml
+++ b/Resources/Prototypes/White/Ghosts/custom_ghosts.yml
@@ -402,3 +402,12 @@
   alpha: 0.9
   ghostName: Gawr
   ghostDescription: Из океана...
+
+#kreses
+- type: customGhost
+  id: kreses-ghost
+  ckey: kreses
+  sprite: White/Ghosts/kreses-ghost.rsi
+  alpha: 0.9
+  ghostName: Gawr
+  ghostDescription: Из океана...
