--- a/Resources/Prototypes/Entities/Objects/Devices/MechComp/some.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/MechComp/some.yml
@@ -120,6 +120,28 @@
     - type: MechCompPressurePad
     - type: Sprite
       sprite: White/MechComp/pressurepad.rsi
+    - type: StepTrigger
+      intersectRatio: 0.2
+    - type: CollisionWake
+      enabled: false
+    - type: Physics
+      bodyType: Dynamic
+    - type: Fixtures
+      fixtures:
+        slips:
+          shape:
+            !type:PhysShapeAabb
+            bounds: "-0.4,-0.3,0.4,0.3"
+          layer:
+          - SlipLayer
+          hard: false
+        fix1:
+          shape:
+            !type:PhysShapeAabb
+            bounds: "-0.4,-0.3,0.4,0.3"
+          density: 10
+          mask:
+          - ItemMask
 
 - type: entity
   name: MechComp Comparer
