- tweak: Artificer flies.

--- a/Resources/Prototypes/_White/Entities/Cult/constructs.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/constructs.yml
@@ -127,6 +127,7 @@
     - type: MovementSpeedModifier
       baseWalkSpeed: 3
       baseSprintSpeed: 3
+    - type: MovementIgnoreGravity
     - type: Puller
       needsHands: false
     - type: MeleeWeapon
