--- a/Resources/Prototypes/Reagents/elements.yml
+++ b/Resources/Prototypes/Reagents/elements.yml
@@ -46,6 +46,14 @@
         damage:
           types:
             Poison: 2
+  reactiveEffects:
+    Acidic:
+      methods: [ Touch ]
+      effects:
+      - !type:HealthChange
+        damage:
+          types:
+            Heat: 0.5
 
 - type: reagent
   id: Copper
@@ -105,6 +113,16 @@
           types:
             Caustic: 0.5
             Poison: 0.5
+  reactiveEffects:
+    Acidic:
+      methods: [ Touch ]
+      effects:
+      - !type:HealthChange
+        scaleByQuantity: true
+        damage:
+          types:
+            Heat: 0.5
+
 - type: reagent
   id: Gold
   name: reagent-name-gold
@@ -205,6 +223,9 @@
       - !type:GenericStatusEffect
         key: Stutter
         component: ScrambledAccent
+      - !type:GenericStatusEffect
+        key: BlurryVision
+        component: BlurryVision
 
 - type: reagent
   id: Potassium
@@ -246,6 +267,16 @@
   color: "#00ff04"
   meltingPoint: 700.0
   boilingPoint: 1737.0
+  reactiveEffects:
+    Acidic:
+      methods: [ Touch ]
+      effects:
+      - !type:HealthChange
+        scaleByQuantity: true
+        damage:
+          types:
+            Heat: 0.5
+            Cellular: 1
 
 - type: reagent
   id: Silicon
